force-app/main/default/objects/Stage_Tracking__c/Stage_Tracking__c.object-meta.xml
<CustomObject>
    <label>Stage Tracking</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Stage Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>