force-app/main/default/objects/Stage_Tracking__c/fields/Business_Hours_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_in_Stage__c</fullName>
    <formula>IF(8*(
(5*FLOOR((DATEVALUE(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c ))-DATE(1996,01,01))/7) +
MIN(5,
MOD(DATEVALUE(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c ))-DATE(1996,01,01), 7) +
MIN(1, 24/8*(MOD(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c )-DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;)-1, 1)))
))
-
(5*FLOOR((DATEVALUE(Stage_Changing_Date__c)-DATE(1996,01,01))/7) +
MIN(5,
MOD(DATEVALUE(Stage_Changing_Date__c)-DATE(1996,01,01), 7) +
MIN(1, 24/8*(MOD(IF(AND(Stage_Changing_Date__c &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 23:00:00&apos;),Stage_Changing_Date__c &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 14:00:00&apos;)),DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 23:00:00&apos;),Stage_Changing_Date__c) - DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;)-1, 1)))
))
) &lt;0 ,
8 + 8*(
(5*FLOOR((DATEVALUE(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c ))-DATE(1996,01,01))/7) +
MIN(5,
MOD(DATEVALUE(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c ))-DATE(1996,01,01), 7) +
MIN(1, 24/8*(MOD(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c )-DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;)-1, 1)))
))
-
(5*FLOOR((DATEVALUE(Stage_Changing_Date__c)-DATE(1996,01,01))/7) +
MIN(5,
MOD(DATEVALUE(Stage_Changing_Date__c)-DATE(1996,01,01), 7) +
MIN(1, 24/8*(MOD(IF(AND(Stage_Changing_Date__c &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 23:00:00&apos;),Stage_Changing_Date__c &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 14:00:00&apos;)),DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 23:00:00&apos;),Stage_Changing_Date__c) - DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;)-1, 1)))
))
), 
8*(
(5*FLOOR((DATEVALUE(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c ))-DATE(1996,01,01))/7) +
MIN(5,
MOD(DATEVALUE(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c ))-DATE(1996,01,01), 7) +
MIN(1, 24/8*(MOD(IF( ISBLANK(New_Stage_End_Date__c) , NOW() , New_Stage_End_Date__c )-DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;)-1, 1)))
))
-
(5*FLOOR((DATEVALUE(Stage_Changing_Date__c)-DATE(1996,01,01))/7) +
MIN(5,
MOD(DATEVALUE(Stage_Changing_Date__c)-DATE(1996,01,01), 7) +
MIN(1, 24/8*(MOD(IF(AND(Stage_Changing_Date__c &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 23:00:00&apos;),Stage_Changing_Date__c &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 14:00:00&apos;)),DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Stage_Changing_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Stage_Changing_Date__c))) + &apos; 23:00:00&apos;),Stage_Changing_Date__c) - DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;)-1, 1)))
))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Hours in Stage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>