force-app/main/default/objects/Stage_Tracking__c/fields/Change_in_expected_rev_number__c.field-meta.xml
<CustomField>
    <fullName>Change_in_expected_rev_number__c</fullName>
    <formula>Change_in_Expected_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change in expected rev (number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>