force-app/main/default/objects/Stage_Tracking__c/fields/Change_in_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Expected_Revenue__c</fullName>
    <label>Change in Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>