force-app/main/default/objects/Stage_Tracking__c/fields/Duration_Bus_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Bus_Days__c</fullName>
    <label>Duration (Bus. Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>