force-app/main/default/objects/Stage_Tracking__c/fields/Hour_of_Day_Created_24h__c.field-meta.xml
<CustomField>
    <fullName>Hour_of_Day_Created_24h__c</fullName>
    <formula>HOUR( TIMEVALUE( Stage_Changing_Date__c + (10 / 24 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour of Day Created (24h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>