force-app/main/default/objects/Stage_Tracking__c/fields/Last_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change_Date__c</fullName>
    <label>Last Stage Change Date</label>
    <type>DateTime</type>
</CustomField>