force-app/main/default/objects/Stage_Tracking__c/fields/New_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Stage__c</fullName>
    <label>New Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>