force-app/main/default/objects/Stage_Tracking__c/fields/New_Stage_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Stage_Beginning_Date__c</fullName>
    <label>New Stage Beginning Date</label>
    <type>DateTime</type>
</CustomField>