force-app/main/default/objects/Stage_Tracking__c/fields/New_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>New_Stage_Duration__c</fullName>
    <label>New Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>