force-app/main/default/objects/Stage_Tracking__c/fields/Old_Stage__c.field-meta.xml
<CustomField>
    <fullName>Old_Stage__c</fullName>
    <label>Previous Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>