force-app/main/default/objects/Stage_Tracking__c/fields/Stage_Changing_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Changing_Date__c</fullName>
    <label>New Stage Beginning Date</label>
    <type>DateTime</type>
</CustomField>