force-app/main/default/objects/Stage_Tracking__c/fields/Stage_Count__c.field-meta.xml
<CustomField>
    <fullName>Stage_Count__c</fullName>
    <label>Stage Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>