force-app/main/default/objects/Stage_Tracking__c/fields/Time_at_current_stage__c.field-meta.xml
<CustomField>
    <fullName>Time_at_current_stage__c</fullName>
    <label>Time at current stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>