force-app/main/default/objects/Stage_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Previous_Stage__c</columns>
    <columns>New_Stage__c</columns>
    <columns>New_Stage_Beginning_Date__c</columns>
    <columns>Last_Stage_Change_Date__c</columns>
    <columns>Duration_Bus_Days__c</columns>
    <columns>Time_at_current_stage__c</columns>
    <columns>New_Stage_End_Date__c</columns>
    <columns>New_Stage_Duration__c</columns>
    <columns>Stage_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>